Src/objects/State__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>State_s_Country__c</fullName>
        <formula>Country__r.Name  &amp; &quot;-&gt;&quot;  &amp;  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State&apos;s Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Districts__c</fullName>
        <label>Total Districts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>State</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>